<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:textStyle="normal"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="로그인"/>

    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/email_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/email_login_text"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:paddingStart="10dp"
        android:background="@drawable/email_login_btn"/>

    <Button
        android:id="@+id/email_signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_signin_text"
        android:textColor="@color/white"
        android:padding="16dp"
        android:textStyle="bold"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:paddingEnd="10dp"
        android:background="@drawable/email_signin_btn"/>

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_login_text"
        android:textColor="@color/shadow"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:paddingEnd="10dp"
        android:background="@drawable/google_login_btn"/>

    <Button
        android:id="@+id/kakao_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:text="@string/kakao_login_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/kakao_login_btn"
        android:contentDescription="@string/com_kakao_login_button"
        android:layout_marginBottom="20dp"
        android:paddingEnd="10dp"/>
</LinearLayout>