<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/locateScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LocateFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TODO: Update blank fragment layout -->
            <LinearLayout
                android:id="@+id/button_group"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/age_tap"
                    android:background="@drawable/background_count_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/age_range"
                        android:fontFamily="@font/maplestory_bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black"/>

                <LinearLayout
                    android:id="@+id/gender_tap"
                    android:background="@drawable/background_count_middle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/gender"
                        android:fontFamily="@font/maplestory_bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black"/>

                <LinearLayout
                    android:id="@+id/locate_tap"
                    android:background="@drawable/background_count_right_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/locate"
                        android:fontFamily="@font/maplestory_bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/countLinearFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/button_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/option1"
                    android:gravity="left|center"
                    android:text="옵션1 제목"
                    android:fontFamily="@font/maplestory_light"
                    android:textSize="20sp"
                    android:textColor="@color/title_red"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>

                <TextView
                    android:id="@+id/option2"
                    android:gravity="left|center"
                    android:text="옵션2 제목"
                    android:fontFamily="@font/maplestory_light"
                    android:textSize="20sp"
                    android:textColor="@color/tilte_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"/>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/opt1_chart"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/countLinearFrame">

                    <LinearLayout
                        android:id="@+id/koreaArea"
                        android:background="@drawable/korea"
                        android:layout_width="match_parent"
                        android:layout_height="600dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="600dp"
                            android:layout_weight="2.1"
                            android:gravity="center"
                            android:orientation="horizontal">


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|bottom"
                                android:layout_weight="1.2"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1.9"/>

                                <LinearLayout
                                    android:layout_gravity="bottom"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <com.github.mikephil.charting.charts.PieChart
                                        android:id="@+id/gyeonggiChart"
                                        android:layout_width="70dp"
                                        android:layout_marginTop="20dp"
                                        android:layout_height="70dp" />

                                    <TextView
                                        android:text="경기"
                                        android:textColor="@color/black"
                                        android:textAlignment="center"
                                        android:textSize="15sp"
                                        android:layout_width="100dp"
                                        android:layout_height="30dp"/>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|left"
                                android:layout_weight="1.2"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <com.github.mikephil.charting.charts.PieChart
                                        android:id="@+id/gangwonChart"
                                        android:layout_width="70dp"
                                        android:layout_height="70dp" />

                                    <TextView
                                        android:text="강원"
                                        android:textColor="@color/black"
                                        android:textAlignment="center"
                                        android:textSize="15sp"
                                        android:layout_width="100dp"
                                        android:layout_height="30dp"/>

                                </LinearLayout>



                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.6"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1.5"
                                android:gravity="center"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical"
                                        android:gravity="center">

                                        <com.github.mikephil.charting.charts.PieChart
                                            android:id="@+id/chungcheongChart"
                                            android:layout_width="70dp"
                                            android:layout_height="70dp" />

                                        <TextView
                                            android:text="충청"
                                            android:textColor="@color/black"
                                            android:textAlignment="center"
                                            android:textSize="15sp"
                                            android:layout_width="100dp"
                                            android:layout_height="30dp"/>

                                    </LinearLayout>



                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center|top"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <com.github.mikephil.charting.charts.PieChart
                                            android:id="@+id/jeollaChart"
                                            android:layout_width="70dp"
                                            android:layout_height="70dp" />

                                        <TextView
                                            android:text="전라"
                                            android:textColor="@color/black"
                                            android:textAlignment="center"
                                            android:textSize="15sp"
                                            android:layout_width="100dp"
                                            android:layout_height="30dp"/>

                                    </LinearLayout>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:gravity="center|left"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center">

                                    <com.github.mikephil.charting.charts.PieChart
                                        android:id="@+id/gyeongsangChart"
                                        android:layout_width="70dp"
                                        android:layout_height="70dp" />

                                    <TextView
                                        android:text="경상"
                                        android:textColor="@color/black"
                                        android:textAlignment="center"
                                        android:textSize="15sp"
                                        android:layout_width="100dp"
                                        android:layout_height="30dp"/>

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2.5"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center|bottom"
                                android:layout_weight="1">

                                <com.github.mikephil.charting.charts.PieChart
                                    android:id="@+id/jejuChart"
                                    android:layout_width="70dp"
                                    android:layout_height="70dp" />

                                <TextView
                                    android:text="제주"
                                    android:textColor="@color/black"
                                    android:textAlignment="center"
                                    android:textSize="15sp"
                                    android:layout_width="100dp"
                                    android:layout_height="30dp"/>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:layout_weight="1"/>

                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    </ScrollView>
</layout>